[gd_scene load_steps=4 format=3 uid="uid://c0mn3gc85qyld"]

[ext_resource type="Script" uid="uid://c25mpqh84eqnv" path="res://scripts/profiling/profiling_main_scene.gd" id="1_ef27e"]
[ext_resource type="Script" uid="uid://c3qn487o50poe" path="res://scripts/profiling/profiler.gd" id="9_m2au4"]
[ext_resource type="Theme" uid="uid://b8bdf4l66bp3o" path="res://assets/ui_theme.tres" id="11_r70nd"]

[node name="ProfilingMain" type="Node3D"]
script = ExtResource("1_ef27e")

[node name="Profiler" type="Node" parent="."]
script = ExtResource("9_m2au4")

[node name="UI" type="Panel" parent="."]
offset_right = 139.0
offset_bottom = 143.0
theme = ExtResource("11_r70nd")

[node name="MarginContainer" type="MarginContainer" parent="UI"]
layout_mode = 0
offset_left = 10.0
offset_top = 8.0
offset_right = 120.0
offset_bottom = 74.0

[node name="VBoxContainer" type="VBoxContainer" parent="UI/MarginContainer"]
layout_mode = 2

[node name="Select scene" type="OptionButton" parent="UI/MarginContainer/VBoxContainer"]
layout_mode = 2
selected = 0
item_count = 4
popup/item_0/text = "rotating_object"
popup/item_0/id = 0
popup/item_1/text = "multiple_objects"
popup/item_1/id = 1
popup/item_2/text = "pixel_count"
popup/item_2/id = 2
popup/item_3/text = "env_and_lights"
popup/item_3/id = 3

[node name="Select shader" type="OptionButton" parent="UI/MarginContainer/VBoxContainer"]
layout_mode = 2
selected = 0
item_count = 3
popup/item_0/text = "pm_aging"
popup/item_0/id = 0
popup/item_1/text = "baseline"
popup/item_1/id = 1
popup/item_2/text = "baked"
popup/item_2/id = 2

[node name="Bake Resolution" type="SpinBox" parent="UI/MarginContainer/VBoxContainer"]
layout_mode = 2
min_value = 1.0
max_value = 10000.0
value = 2048.0
rounded = true
prefix = "bake_res:"

[node name="Pause aging" type="CheckButton" parent="UI/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Pause aging"

[node name="Reset scene" type="Button" parent="UI/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Reset scene"

[connection signal="item_selected" from="UI/MarginContainer/VBoxContainer/Select scene" to="." method="set_scene"]
[connection signal="item_selected" from="UI/MarginContainer/VBoxContainer/Select shader" to="." method="set_shader"]
[connection signal="value_changed" from="UI/MarginContainer/VBoxContainer/Bake Resolution" to="." method="set_bake_res"]
[connection signal="toggled" from="UI/MarginContainer/VBoxContainer/Pause aging" to="." method="pause_aging"]
[connection signal="pressed" from="UI/MarginContainer/VBoxContainer/Reset scene" to="." method="reset_scene"]
